--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <img src="./assets/herobg-CSqWnoE3.png" alt="Hero Background">
   </body>
 </html>
