--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="root"></div>
     <img src="./assets/herobg-CSqWnoE3.png" alt="Hero Background">
+    <img src="./web-08ko_qNY.png" alt="Web-qNY">
   </body>
 </html>
